[package]
name = "http-rust-example"
authors = ["Rajat Jindal <rajatjindal83@gmail.com>"]
description = "a simple example to demonstrate analytics for spin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v0.10.0" }
spin-analytics = { git = "https://github.com/rajatjindal/spin-analytics", branch = "main" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }

[workspace]